@@ -32,3 +32,4 @@ Test::Fatal = 0.003
 Test::Warn = 0.21
 Test::More = 0.88
 Test::Requires = 0.05
+Test::Trap = 0
